--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body{
     font-family: Arial, sans-serif;
-    background-color:#f4f4f4;
+    background-color:beige;
     margin:0;
     padding:0;
     display: flex;
@@ -20,10 +20,12 @@ h1{
     gap: 25px;
 }
 .card{
-    width:200px;
+    width:300px;
     background-color: #ffffff;
     padding: 20px;
+    margin: 10px;
     border: radius 50%;
+    border: 4px solid blue;
     text-align: center;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s;
@@ -44,8 +46,9 @@ h1{
 
 }
 .card h3{
+    font-weight: bold;
     font-size:1rem;
-    color:#555;
+    color:black;
     margin-bottom:15px;    
 }
 .card p{
